fix en el src y el link de stylesheets

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/estilos.css">
+    <link rel="stylesheet" href="./styles/estilos.css">
     <title>Calculador simple Mayor/Menor/Promedio de edad</title>
 </head>
 <body>
@@ -39,7 +39,7 @@
         </form>
     </nav>
 
-    <script src="/script/calculos.js"></script>
-    <script src="/script/main.js"></script>
+    <script src="./script/calculos.js"></script>
+    <script src="./script/main.js"></script>
 </body>
 </html>
